--- a/Microsoft.Toolkit.Uwp.UI/Microsoft.Toolkit.Uwp.UI.csproj
+++ b/Microsoft.Toolkit.Uwp.UI/Microsoft.Toolkit.Uwp.UI.csproj
@@ -45,7 +45,10 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
-    <Compile Include="Extensions\ListViewBaseExtensions\ListViewBaseExtensions.Data.cs" />
+    <Compile Include="Extensions\Hyperlink\Hyperlink.Properties.cs" />
+    <Compile Include="Extensions\Hyperlink\Hyperlink.cs" />
+    <Compile Include="Extensions\ListViewBase\ListViewBaseExtensions.cs" />
+    <Compile Include="Extensions\ListViewBase\ListViewBase.Data.cs" />
     <None Include="Microsoft.Toolkit.Uwp.UI.ruleset" />
     <None Include="project.json" />
   </ItemGroup>
@@ -72,13 +75,13 @@
     <Compile Include="Converters\EmptyStringToObjectConverter.cs" />
     <Compile Include="Converters\FormatStringConverter.cs" />
     <Compile Include="Converters\ResourceNameToResourceStringConverter.cs" />
-    <Compile Include="Extensions\ListViewBaseExtensions\ListViewBaseExtensions.cs" />
-    <Compile Include="Extensions\HyperlinkExtensions\HyperlinkExtensions.cs" />
+    <Compile Include="Extensions\ListViewBase\ListViewBase.cs" />
+    <Compile Include="Extensions\Hyperlink\HyperlinkExtensions.cs" />
     <Compile Include="Converters\StringVisibilityConverter.cs" />
     <Compile Include="Converters\StringFormatConverter.cs" />
     <Compile Include="Extensions\ApplicationView\ApplicationView.cs" />
-    <Compile Include="Extensions\ListViewBaseExtensions\ListViewBaseExtensions.Properties.cs" />
-    <Compile Include="Extensions\SurfaceDialTextboxHelper\SurfaceDialTextboxHelper.cs" />
+    <Compile Include="Extensions\ListViewBase\ListViewBase.Properties.cs" />
+    <Compile Include="Extensions\SurfaceDialTextbox\SurfaceDialTextbox.cs" />
     <Compile Include="Extensions\TextBoxMask\TextBoxMask.cs" />
     <Compile Include="Extensions\TextBoxMask\TextBoxMask.Properties.cs" />
     <Compile Include="Extensions\TextBoxRegEx\TextBoxRegex.cs" />
@@ -87,7 +90,9 @@
     <Compile Include="Extensions\TitleBar\TitleBar.cs" />
     <Compile Include="Extensions\StatusBar\StatusBar.cs" />
     <Compile Include="Extensions\VisualTreeExtensions.cs" />
-    <Compile Include="Extensions\WebViewExtensions\WebViewExtensions.cs" />
+    <Compile Include="Extensions\WebView\WebView.Properties.cs" />
+    <Compile Include="Extensions\WebView\WebView.cs" />
+    <Compile Include="Extensions\WebView\WebViewExtensions.cs" />
     <Compile Include="Helpers\BindableValueHolder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
