Simplification of HttpHelper instantiation Create another HttpHelper constructor that provides option to specify pool size only Created HttpDataProviderBase for use with services. Instantiate HttpHelper in CacheBase rather than using StreamHelper

--- a/Microsoft.Toolkit.Uwp.Services/Microsoft.Toolkit.Uwp.Services.csproj
+++ b/Microsoft.Toolkit.Uwp.Services/Microsoft.Toolkit.Uwp.Services.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="Core\DataProviderBase{TConfig,TSchema}.cs" />
     <Compile Include="Core\ExtensionMethods.cs" />
+    <Compile Include="Core\HttpDataProviderBase.cs" />
     <Compile Include="Core\IDataService{T,U,V}.cs" />
     <Compile Include="Services\MicrosoftTranslator\ServiceLanguage.cs" />
     <Compile Include="Services\Twitter\TwitterStreamCallbacks.cs" />
