-Simplified Toggling logic, you now only Toggle the IsToggled property, and handle the IsToggled value in your own code (Keep a reference to the ToggleButton handy).
-RichTextFormatter Stub will now Toggle the buttons when the selection changes (This could be implemented in a cleaner fashion).

-Moved Common Button abstract Methods out of Formatter class, into the ButtonActions abstract class. You can override this class and populate the common actions this way, and it has been created for MarkDown and RichText. This was done as, if this Toolbar was used to format, e.g. HTML Scripts, it would have no need for any Set Bold Methods, etc. and those methods would clutter the Formatter class.

-Rearranged Class defintions so that properties are at the Bottom.

-Moved Formatters to their own Folder, moved CommonButtons to their own folder.

-Headers are now Ceated on a new Line.

-Label text is autofilled if there is a Selection when opening the Link Dialog.

-Backspacing a ListIterator (Quote, List, OrderedList), now works, it will untoggle the Repeat action, so you can escape the iteration.

-KeyDown for Editor now pushes all Key events.

--- a/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
@@ -120,10 +120,13 @@
     <Compile Include="TextBoxRegex\TextBoxRegex.Data.cs" />
     <Compile Include="TextBoxRegex\TextBoxRegex.Properties.cs" />
     <Compile Include="TextBoxRegex\TextBoxRegex.cs" />
+    <Compile Include="TextToolbar\Formats\ButtonActions.cs" />
     <Compile Include="TextToolbar\Formats\Format.cs" />
     <Compile Include="TextToolbar\Formats\Formatter.cs" />
-    <Compile Include="TextToolbar\Formats\MarkDownFormatter.cs" />
-    <Compile Include="TextToolbar\Formats\RichTextFormatter.cs" />
+    <Compile Include="TextToolbar\Formats\MarkDown\MarkDownButtonActions.cs" />
+    <Compile Include="TextToolbar\Formats\MarkDown\MarkDownFormatter.cs" />
+    <Compile Include="TextToolbar\Formats\RichText\RichTextButtonActions.cs" />
+    <Compile Include="TextToolbar\Formats\RichText\RichTextFormatter.cs" />
     <Compile Include="TextToolbar\ShortcutKeyRequestArgs.cs" />
     <Compile Include="TextToolbar\Symbols\List.cs" />
     <Compile Include="TextToolbar\Symbols\NumberedList.cs" />
@@ -134,8 +137,8 @@
     <Compile Include="TextToolbar\TextToolbarStrings.cs" />
     <Compile Include="TextToolbar\TextToolbar.Properties.cs" />
     <Compile Include="TextToolbar\ToolbarItems\ButtonMap.cs" />
-    <Compile Include="TextToolbar\ToolbarItems\CommonButtons.cs" />
-    <Compile Include="TextToolbar\ToolbarItems\CommonButtons.Events.cs" />
+    <Compile Include="TextToolbar\ToolbarItems\Common\CommonButtons.cs" />
+    <Compile Include="TextToolbar\ToolbarItems\Common\CommonButtons.Events.cs" />
     <Compile Include="TextToolbar\ToolbarItems\DefaultButton.cs" />
     <Compile Include="TextToolbar\ToolbarItems\IToolbarItem.cs" />
     <Compile Include="TextToolbar\ToolbarItems\RemovalList.cs" />
