--- a/Microsoft.Toolkit.Uwp.UI.Controls/project.json
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/project.json
@@ -3,7 +3,8 @@
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.3",
     "Microsoft.Xaml.Behaviors.Uwp.Managed": "1.1.0",
     "Robmikh.CompositionSurfaceFactory": "0.7.1",
-    "StyleCop.Analyzers": "1.0.0"
+    "StyleCop.Analyzers": "1.0.0",
+    "WinRTXamlToolkit.UWP": "2.3.0"
   },
   "frameworks": {
     "uap10.0": {}
