--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,11 @@ BundleArtifacts
 !/build
 /build/tools/GitVersion.CommandLine
 AppPackages
+
+# NuGet V3 artifacts
+*-packages.config
+*.nuget.props
+*.nuget.targets
+project.lock.json
+msbuild.binlog
+*.project.lock.json
