feat(InAppNotification): add ability to hide dismiss button

--- a/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
@@ -58,6 +58,7 @@
     <Compile Include="InAppNotification\InAppNotification.Constants.cs" />
     <Compile Include="InAppNotification\InAppNotification.cs" />
     <Compile Include="InAppNotification\InAppNotification.Events.cs" />
+    <Compile Include="InAppNotification\InAppNotification.Properties.cs" />
     <Compile Include="Menu\Menu.Events.cs" />
     <Compile Include="Menu\Menu.Extensions.cs" />
     <Compile Include="Menu\Menu.cs" />
