--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Converters\Test_BoolToObjectConverter.cs" />
     <Compile Include="Converters\Test_EmptyCollectionToObjectConverter.cs" />
     <Compile Include="Converters\Test_EmptyStringToObjectConverter.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Helpers\Test_BackgroundTaskHelper.cs" />
     <Compile Include="Helpers\Test_ColorHelper.cs" />
     <Compile Include="Helpers\Test_ConnectionHelper.cs" />
@@ -123,6 +124,22 @@
     <Compile Include="Helpers\Test_HttpHelper.cs" />
     <Compile Include="Helpers\Test_StreamHelper.cs" />
     <Compile Include="Helpers\Test_DeepLinkParser.cs" />
+    <Compile Include="Markdown\Parse\BoldTests.cs" />
+    <Compile Include="Markdown\Parse\CodeTests.cs" />
+    <Compile Include="Markdown\Parse\HeaderTests.cs" />
+    <Compile Include="Markdown\Parse\HorizontalRuleTests.cs" />
+    <Compile Include="Markdown\Parse\HyperlinkTests.cs" />
+    <Compile Include="Markdown\Parse\ItalicTests.cs" />
+    <Compile Include="Markdown\Parse\ListTests.cs" />
+    <Compile Include="Markdown\Parse\MarkdownLinkTests.cs" />
+    <Compile Include="Markdown\Parse\ParagraphTests.cs" />
+    <Compile Include="Markdown\Parse\ParseTestBase.cs" />
+    <Compile Include="Markdown\Parse\ParseTestExtensionMethods.cs" />
+    <Compile Include="Markdown\Parse\QuoteTests.cs" />
+    <Compile Include="Markdown\Parse\StrikethroughTests.cs" />
+    <Compile Include="Markdown\Parse\SuperscriptTests.cs" />
+    <Compile Include="Markdown\Parse\TableTests.cs" />
+    <Compile Include="Markdown\TestBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helpers\Test_WeakEventListener.cs" />
     <Compile Include="Services\Test_BingService.cs" />
@@ -163,6 +180,10 @@
     <ProjectReference Include="..\Microsoft.Toolkit.Uwp.Services\Microsoft.Toolkit.Uwp.Services.csproj">
       <Project>{7189a42d-6f1a-4fa3-8e00-e2c14fdf167a}</Project>
       <Name>Microsoft.Toolkit.Uwp.Services</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Microsoft.Toolkit.Uwp.UI.Controls\Microsoft.Toolkit.Uwp.UI.Controls.csproj">
+      <Project>{e9faabfb-d726-42c1-83c1-cb46a29fea81}</Project>
+      <Name>Microsoft.Toolkit.Uwp.UI.Controls</Name>
     </ProjectReference>
     <ProjectReference Include="..\Microsoft.Toolkit.Uwp.UI\Microsoft.Toolkit.Uwp.UI.csproj">
       <Project>{3dd8aa7c-3569-4e51-992f-0c2257e8878e}</Project>
