--- a/Microsoft.Toolkit.Uwp.SampleApp/project.json
+++ b/Microsoft.Toolkit.Uwp.SampleApp/project.json
@@ -3,6 +3,7 @@
     "Microsoft.Graph": "1.2.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.3",
     "Microsoft.Xaml.Behaviors.Uwp.Managed": "1.1.0",
+    "Monaco.Editor": "0.2.0",
     "Newtonsoft.Json": "9.0.1",
     "NotificationsVisualizerLibrary": "1.0.1",
     "StyleCop.Analyzers": "1.0.2",
