refactor(Expander): copy LayoutTransformControl code inside the toolkit

--- a/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
@@ -56,6 +56,9 @@
     <Compile Include="Carousel\Carousel.cs" />
     <Compile Include="Carousel\CarouselPanel.cs" />
     <Compile Include="Expander\ExpandDirection.cs" />
+    <Compile Include="LayoutTransformControl\LayoutTransformControl.cs" />
+    <Compile Include="LayoutTransformControl\LayoutTransformControl.Properties.cs" />
+    <Compile Include="LayoutTransformControl\PropertyChangeEventSource.cs" />
     <Compile Include="Menu\Menu.Events.cs" />
     <Compile Include="Menu\Menu.Extensions.cs" />
     <Compile Include="Menu\Menu.cs" />
@@ -183,6 +186,11 @@
     <Page Include="Carousel\Carousel.xaml">
       <SubType>Designer</SubType>
       <Generator>XamlIntelliSenseFileGenerator</Generator>
+    </Page>
+    <Page Include="LayoutTransformControl\LayoutTransformControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Page>
     <Page Include="Menu\Menu.xaml">
       <Generator>MSBuild:Compile</Generator>
