moved helpers to helpers namespace

--- a/Microsoft.Toolkit.Uwp/Microsoft.Toolkit.Uwp.csproj
+++ b/Microsoft.Toolkit.Uwp/Microsoft.Toolkit.Uwp.csproj
@@ -61,7 +61,19 @@
     <Compile Include="Helpers\DeepLinkParser\CollectionFormingDeepLinkParser.cs" />
     <Compile Include="Helpers\BackgroundTaskHelper.cs" />
     <Compile Include="Helpers\ColorHelper.cs" />
-    <Compile Include="Helpers\Network\ConnectionHelper.cs" />
+    <Compile Include="Helpers\Deprecated\BackgroundTaskHelper.cs" />
+    <Compile Include="Helpers\Deprecated\BaseObjectStorageHelper.cs" />
+    <Compile Include="Helpers\Deprecated\CollectionFormingDeepLinkParser.cs" />
+    <Compile Include="Helpers\Deprecated\ColorHelper.cs" />
+    <Compile Include="Helpers\Deprecated\DeepLinkParser.cs" />
+    <Compile Include="Helpers\Deprecated\DispatcherHelper.cs" />
+    <Compile Include="Helpers\Deprecated\IObjectStorageHelper.cs" />
+    <Compile Include="Helpers\Deprecated\LocalObjectStorageHelper.cs" />
+    <Compile Include="Helpers\Deprecated\PrintHelper.cs" />
+    <Compile Include="Helpers\Deprecated\RoamingObjectStorageHelper.cs" />
+    <Compile Include="Helpers\Deprecated\StorageFileHelper.cs" />
+    <Compile Include="Helpers\Deprecated\StreamHelper.cs" />
+    <Compile Include="Helpers\Deprecated\WeakEventListener.cs" />
     <Compile Include="Helpers\Network\ConnectionInformation.cs" />
     <Compile Include="Helpers\Network\ConnectionType.cs" />
     <Compile Include="Helpers\DispatcherHelper.cs" />
